# ocean-simulation

./: .gitignore  CMakeLists.txt  ReadMe.md
assets/shaders/ocean/: frag.glsl  vert.glsl
include/: buffer.h  camera.h  input.h  mesh.h  renderer.h  shader.h  texture.h  transform.h  utils.h  window.h
src/engine/: buffer.cpp  camera.cpp  input.cpp  shader.cpp  texture.cpp  transform.cpp  window.cpp
src/game/: main.cpp  renderer.cpp
